[gd_scene load_steps=11 format=3 uid="uid://ik27nkd02ose"]

[ext_resource type="Script" uid="uid://bfbcpcsge1tcn" path="res://ui/ui/main_ui/mainui.gd" id="1_bqiya"]
[ext_resource type="Theme" uid="uid://dq67os7j8flsh" path="res://ui/ui/main_ui/maintheme.tres" id="2_0e4jt"]
[ext_resource type="PackedScene" uid="uid://cjybbal1tv5f0" path="res://ui/ui/introduction.tscn" id="2_kx1vw"]
[ext_resource type="Texture2D" uid="uid://4qh5wnlc4xfs" path="res://assets/chikochiko_full.png" id="3_7riyb"]
[ext_resource type="Texture2D" uid="uid://883q87siu5li" path="res://chikochiko.svg" id="3_ncs8n"]
[ext_resource type="Texture2D" uid="uid://x0poxvkjhdrt" path="res://{BEC53DFB-FD22-9040-ACA0-6559149EDB9D}.png" id="3_pgaip"]
[ext_resource type="Texture2D" uid="uid://db56dktkggbt5" path="res://assets/textures/眼球.png" id="6_itr3r"]
[ext_resource type="AudioStream" uid="uid://dh30fjo7ymc6n" path="res://assets/crazy poision alives.ogg" id="6_lluby"]
[ext_resource type="AudioStream" uid="uid://dn6l0k6oxdo2d" path="res://我的乐曲-6_1_.ogg" id="8_pgaip"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2r3vs"]
texture = ExtResource("3_7riyb")

[node name="MainUi" type="CanvasLayer" node_paths=PackedStringArray("start_game_button", "quit_game_button")]
script = ExtResource("1_bqiya")
intoduction_ui = ExtResource("2_kx1vw")
start_game_button = NodePath("MainUI/MainPanel/Start")
quit_game_button = NodePath("MainUI/MainPanel/Quit")
metadata/_custom_type_script = "uid://bhwyguulvscig"

[node name="MainUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0e4jt")

[node name="Background" type="TextureRect" parent="MainUI"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("3_pgaip")

[node name="TeamPanel" type="Panel" parent="MainUI"]
visible = false
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
theme_override_styles/panel = SubResource("StyleBoxTexture_2r3vs")

[node name="TextureRect" type="TextureRect" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_top = 3.0
offset_right = 512.0
offset_bottom = 515.0
scale = Vector2(0.331368, 0.331368)
texture = ExtResource("3_ncs8n")

[node name="Title" type="LinkButton" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_left = 173.0
offset_top = 10.0
offset_right = 653.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(0, 0.588235, 0.717647, 1)
theme_override_colors/font_outline_color = Color(0.0460029, 0.283837, 1, 1)
theme_override_font_sizes/font_size = 96
text = "Team"
uri = "https://www.gmhub.com/team/8817"

[node name="QuitChiko" type="Button" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 435.0
offset_right = 264.0
offset_bottom = 531.0
text = "BACK
"

[node name="TextureRect2" type="TextureRect" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_left = 552.0
offset_top = -7.99998
offset_right = 1064.0
offset_bottom = 504.0
scale = Vector2(0.265988, 0.265988)
texture = ExtResource("3_ncs8n")
flip_h = true

[node name="yumi" type="LinkButton" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_left = 325.0
offset_top = 398.0
offset_right = 517.0
offset_bottom = 470.0
theme_override_colors/font_color = Color(1.54018e-06, 0.514729, 0.656927, 1)
theme_override_colors/font_focus_color = Color(0.746291, 0.360339, 0.445633, 1)
theme_override_colors/font_pressed_color = Color(0.793745, 0.353585, 0.597161, 1)
theme_override_colors/font_hover_color = Color(0.85786, 0.326003, 0.584182, 1)
theme_override_colors/font_hover_pressed_color = Color(0.882881, 0.456006, 0.599834, 1)
text = "明琪小梦"
uri = "https://www.yumieko.com/"

[node name="triangle" type="LinkButton" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_left = 707.0
offset_top = 11.0
offset_right = 851.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(1, 0.611158, 0.634726, 1)
theme_override_colors/font_focus_color = Color(0.746291, 0.360339, 0.445633, 1)
theme_override_colors/font_pressed_color = Color(0.793745, 0.353585, 0.597161, 1)
theme_override_colors/font_hover_color = Color(0.85786, 0.326003, 0.584182, 1)
theme_override_colors/font_hover_pressed_color = Color(0.882881, 0.456006, 0.599834, 1)
theme_override_colors/font_outline_color = Color(0, 0.296379, 0.590111, 1)
text = "九指子"
uri = "https://space.bilibili.com/157354847"

[node name="Dreamtwi" type="LinkButton" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_left = 323.0
offset_top = 3.0
offset_right = 519.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(2.79158e-06, 0.846913, 0.56078, 1)
theme_override_colors/font_focus_color = Color(0.746291, 0.360339, 0.445633, 1)
theme_override_colors/font_pressed_color = Color(0.793745, 0.353585, 0.597161, 1)
theme_override_colors/font_hover_color = Color(0.85786, 0.326003, 0.584182, 1)
theme_override_colors/font_hover_pressed_color = Color(0.882881, 0.456006, 0.599834, 1)
theme_override_colors/font_outline_color = Color(0, 0.296379, 0.590111, 1)
text = "Dreamtwi"
uri = "https://github.com/dreamtwi"

[node name="xx" type="LinkButton" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_left = 71.0
offset_top = 207.0
offset_right = 174.0
offset_bottom = 279.0
theme_override_colors/font_color = Color(3.76021e-10, 0.00101773, 0.000350005, 1)
theme_override_colors/font_focus_color = Color(0.746291, 0.360339, 0.445633, 1)
theme_override_colors/font_pressed_color = Color(0.793745, 0.353585, 0.597161, 1)
theme_override_colors/font_hover_color = Color(0.85786, 0.326003, 0.584182, 1)
theme_override_colors/font_hover_pressed_color = Color(0.882881, 0.456006, 0.599834, 1)
theme_override_colors/font_outline_color = Color(0, 0.296379, 0.590111, 1)
text = "萧萧"
uri = "`https://space.bilibili.com/348732826"

[node name="Inh" type="LinkButton" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_left = 872.0
offset_top = 148.0
offset_right = 1068.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0.73805, 0.879333, 0.974183, 1)
theme_override_colors/font_focus_color = Color(0.746291, 0.360339, 0.445633, 1)
theme_override_colors/font_pressed_color = Color(0.793745, 0.353585, 0.597161, 1)
theme_override_colors/font_hover_color = Color(0.85786, 0.326003, 0.584182, 1)
theme_override_colors/font_hover_pressed_color = Color(0.882881, 0.456006, 0.599834, 1)
theme_override_colors/font_outline_color = Color(0, 0.296379, 0.590111, 1)
text = "Inh"
uri = "https://space.bilibili.com/289934772"

[node name="QED" type="LinkButton" parent="MainUI/TeamPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 348.0
offset_right = 296.0
offset_bottom = 420.0
theme_override_colors/font_color = Color(4.62055e-06, 0.790802, 0.984753, 1)
theme_override_colors/font_focus_color = Color(0.746291, 0.360339, 0.445633, 1)
theme_override_colors/font_pressed_color = Color(0.793745, 0.353585, 0.597161, 1)
theme_override_colors/font_hover_color = Color(0.85786, 0.326003, 0.584182, 1)
theme_override_colors/font_hover_pressed_color = Color(0.882881, 0.456006, 0.599834, 1)
theme_override_colors/font_outline_color = Color(0, 0.296379, 0.590111, 1)
text = "发泡胶 Q.E.D"
uri = "https://space.bilibili.com/323750592"

[node name="MainPanel" type="Panel" parent="MainUI"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0

[node name="Title" type="Label" parent="MainUI/MainPanel"]
layout_mode = 0
offset_left = 248.0
offset_top = 48.0
offset_right = 728.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 96
text = "灵魂炼金师"

[node name="Start" type="Button" parent="MainUI/MainPanel"]
layout_mode = 0
offset_left = 343.0
offset_top = 237.0
offset_right = 593.0
offset_bottom = 335.0
theme = ExtResource("2_0e4jt")
text = "开始游戏"

[node name="Quit" type="Button" parent="MainUI/MainPanel"]
layout_mode = 0
offset_left = 342.0
offset_top = 371.0
offset_right = 593.0
offset_bottom = 467.0
text = "退出游戏
"

[node name="Chiko" type="TextureButton" parent="MainUI/MainPanel"]
layout_mode = 0
offset_left = 75.0
offset_top = 37.0
offset_right = 107.0
offset_bottom = 69.0
scale = Vector2(5, 5)
texture_normal = ExtResource("6_itr3r")

[node name="crazy_music" type="AudioStreamPlayer" parent="MainUI"]
stream = ExtResource("6_lluby")
volume_db = -10.0
mix_target = 1
parameters/looping = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pgaip")
volume_db = 10.0
autoplay = true
mix_target = 1
parameters/looping = true

[connection signal="pressed" from="MainUI/TeamPanel/QuitChiko" to="." method="_on_quit_chiko_pressed"]
[connection signal="pressed" from="MainUI/MainPanel/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MainUI/MainPanel/Chiko" to="." method="_on_chiko_pressed"]
